@@ -16,6 +16,9 @@ Broker:
 - Add support for "log_type all".
 - Add support for "-v" option on the command line to provide the equivalent of
   "log_type all" without needing a config file.
+- Persistence data is now written to a temporary file which is atomically
+  renamed on completion, so a crash during writing will not produce a corrupt
+  file.
 - mosquitto.conf is now installed as mosquitto.conf.example
 - Fix an ACL with topic "#" incorrectly granting access to $SYS.
 - mosquitto_passwd utility now reports errors more clearly.
